--- a/src/global.css
+++ b/src/global.css
@@ -18,11 +18,16 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
     font-size: 1rem;
+    -webkit-scrollbar{
+        display: none;
+    };
+    
 }
 
 body{
     background-color: var(--gray-900);
     color: var(--gray-300);
     -webkit-font-smoothing: antialiased;
+    caret-color: transparent;
 }
 
